--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/privados.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/privados.cshtml
@@ -143,7 +143,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-8 mb-4" style="text-align: right;">
-                                            <button type="button" id="btnSendMsg" type="button" 
+                                            <button type="button" id="btnSendMsg" type="button"
                                                     class="btn btn-success waves-effect waves-light">
                                                 Enviar
                                             </button>
@@ -170,3 +170,45 @@
     <input id="hdUserName" value="@Model.curUser.first_name1 @Model.curUser.last_name1" type="hidden" />
     <input id="hdToUserName" value="@Model.selUser.first_name @Model.selUser.last_name" type="hidden" />
 </div> <!-- Page content Wrapper -->
+
+<h2>Chat</h2>
+<div class="container">
+    <input type="text" id="message" />
+    <input type="button" id="sendmessage" value="Send" />
+    <input type="hidden" id="displayname" />
+    <ul id="discussion">
+    </ul>
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="~/Scripts/jquery.signalR-2.3.0.js"></script>
+
+<script>
+    $(function () {
+        // Reference the auto-generated proxy for the hub.
+        var chat = $.connection.chatHub;
+        // Create a function that the hub can call back to display messages.
+        chat.client.addNewMessageToPage = function (name, message) {
+            // Add the message to the page.
+            $('#discussion').append('<li><strong>' + htmlEncode(name)
+                + '</strong>: ' + htmlEncode(message) + '</li>');
+        };
+        // Get the user name and store it to prepend to messages.
+        $('#displayname').val(prompt('Enter your name:', ''));
+        // Set initial focus to message input box.
+        $('#message').focus();
+        // Start the connection.
+        $.connection.hub.start().done(function () {
+            $('#sendmessage').click(function () {
+                // Call the Send method on the hub.
+                chat.server.send($('#displayname').val(), $('#message').val());
+                // Clear text box and reset focus for next comment.
+                $('#message').val('').focus();
+            });
+        });
+    });
+    // This optional function html-encodes messages for display in the page.
+    function htmlEncode(value) {
+        var encodedValue = $('<div />').text(value).html();
+        return encodedValue;
+    }
+</script>
