--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/susprivados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/susprivados.cshtml
@@ -152,14 +152,14 @@
                                                     }*@
                                                 <input type="file" name="file_name" id="send-file-3"
                                                        class="inputfile inputfile-3" style="display:none">
-                                                <label for="send-file-3"><i class="mdi mdi-paperclip"></i> <span>Enviar archivo...</span></label>
+                                                <label for="send-file-3"><i class="mdi mdi-paperclip"></i> <span>Envíar archivo...</span></label>
                                             </div>
                                         </div>
                                         <div class="col-md-8 mb-4">
                                             <button id="btnSendMsg"
                                                     type="button"
                                                     class="btn btn-success waves-effect waves-light">
-                                                Enviar
+                                                Envíar
                                             </button>
                                         </div>
                                     </div>
