--- a/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
@@ -81,7 +81,7 @@
                                         <th class="f-b">Fecha de Notificación</th>
                                         <th class="f-b text-center">Archivo</th>
                                         <th class="f-b">Descripción</th>
-                                        <th class="f-b text-center">Status</th>
+                                        <th class="f-b text-center">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
