--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
@@ -84,7 +84,7 @@
                                     <small class="form-text text-muted">Número de Ruta</small>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Banco</button>
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i>Cancelar</button>
 
                         </div>
