--- a/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
@@ -114,7 +114,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
-                                        <button type="button" class="btn btn-primary waves-effect waves-light">Agregar nueva Cuenta</button>
+                                        <button type="button" class="btn btn-primary waves-effect waves-light">Guardar</button>
                                     </a>
                                 </div>
                             </div>
