--- a/WebApplication1/Areas/coadmin/Views/eventos/registrados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/registrados.cshtml
@@ -86,7 +86,7 @@
                                         <th class="f-b">Hora</th>
                                         <th class="f-b">Lugar</th>
                                         <th class="f-b">Descripción</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Editar / Eliminar</th>
                                     </tr>
                                 </thead>
