--- a/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
@@ -81,7 +81,7 @@
                                         <th class="f-b">Hora Inicio</th>
                                         <th class="f-b">Hora Fin</th>
                                         <th class="f-b">Intervalo</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Estado</th>
                                         @*<th class="f-b">Solicitud</th>*@
                                         <th class="f-b">Reglamento</th>
                                     </tr>
