--- a/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
@@ -81,7 +81,7 @@
                                         <th class="f-b">Fecha</th>
                                         <th class="f-b">Fecha Límite</th>
                                         <th class="text-center f-b">Nivel de Acceso</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
