--- a/WebApplication1/Areas/coadmin/Views/administrador/perfil.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/administrador/perfil.cshtml
@@ -535,7 +535,7 @@
                                     <small class="form-text text-muted">Número de sello del vehículo</small>
                                 </div>
                             </div>
-                            <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Perfil</button></a>
+                            <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                         </div>
                     }
                 </div>
