--- a/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
@@ -118,7 +118,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address1-input" class="col-sm-3 col-form-label">Status</label>
+                                <label for="example-address1-input" class="col-sm-3 col-form-label">Estado</label>
                                 <div class="col-sm-9">
                                     <div class="form-check-inline my-2">
                                         <div class="custom-control custom-checkbox">
@@ -166,7 +166,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Contrato</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("listado", "contratos", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
