--- a/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
@@ -171,7 +171,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Documento</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
