--- a/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Categoría</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
