--- a/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
@@ -146,7 +146,7 @@
                                     <small class="form-text text-muted">Nota escrita por el administrador</small>
                                 </div>
                             </div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Evento</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
