--- a/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Facilidad</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
