--- a/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
@@ -175,7 +175,7 @@
                                     </div>
                                 </div>
                                 <div class="form-divider"></div>
-                                <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Facilidad</button></a>
+                                <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                                 <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                             </div>
                         }
