--- a/WebApplication1/Areas/coadmin/Views/facilidades/reservar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/reservar.cshtml
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6 mb-4">
-                                <h5 class="d-inline-block">For elije la fecha para reservar:</h5>
+                                <h5 class="d-inline-block">Por favor elije la fecha para reservar:</h5>
                                 <div class="form-divider"></div>
                                 <div id='calendar' class="col-xl-12"></div>
                             </div>
@@ -53,7 +53,7 @@
                                         <thead class="header-table">
                                             <tr>
                                                 <th class="f-b">Horario</th>
-                                                <th class="f-b">Status</th>
+                                                <th class="f-b">Estado</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="form-divider"></div>
-                                <a href="@Url.Action("reservartwo", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light">Reservar Facilidad</button></a>
+                                <a href="@Url.Action("reservartwo", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                                 <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                             </div>
                         </div>
