--- a/WebApplication1/Areas/coadmin/Views/plantillas/crear.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/plantillas/crear.cshtml
@@ -67,7 +67,7 @@
 
                                 <div class="form-group mb-0">
                                     <div class="my-3">
-                                        <button class="btn btn-primary"  type="submit"> <span>Crear Plantilla</span></button>
+                                        <button class="btn btn-primary"  type="submit"> <span>Guardar</span></button>
                                         <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                                     </div>
                                 </div>
