--- a/WebApplication1/Areas/coadmin/Views/tareas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/editar.cshtml
@@ -141,7 +141,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group mb-0 row">
-                                <label class="col-md-3 my-2 control-label">Status</label>
+                                <label class="col-md-3 my-2 control-label">Estado</label>
                                 <div class="col-md-9">
 
                                     <div class="form-check-inline my-2">
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Tarea</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
 </div>
                     }
