--- a/WebApplication1/Areas/coadmin/Views/tecnico/soporte.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tecnico/soporte.cshtml
@@ -122,13 +122,13 @@
                                             <div class="chat-extra-actions">
                                                 <input type="file" name="file_name" id="send-file-3"
                                                        class="inputfile inputfile-3" style="display:none">
-                                                <label for="send-file-3"><i class="mdi mdi-paperclip"></i> <span>Enviar archivo...</span></label>
+                                                <label for="send-file-3"><i class="mdi mdi-paperclip"></i> <span>Envíar archivo...</span></label>
                                             </div>
                                         </div>
                                         <div class="col-md-8 mb-4">
                                             <button type="button" id="btnSendMsg"
                                                     class="btn btn-success waves-effect waves-light">
-                                                Enviar
+                                                Envíar
                                             </button>
                                         </div>
                                     </div>
