Correcion de gramatica

--- a/WebApplication1/Areas/coadmin/Views/contacto/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/listado.cshtml
@@ -75,7 +75,7 @@
                                     <thead>
                                         <tr>
 
-                                            <th class="f-b">Compañia</th>
+                                            <th class="f-b">Compañía</th>
                                             <th class="f-b">Administrador</th>
                                             <th class="f-b">Presidente</th>
                                             <th class="f-b">Vicepresidente</th>
