--- a/WebApplication1/Areas/coadmin/Views/suplidores/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/agregar.cshtml
@@ -180,7 +180,7 @@
                                     <small class="form-text text-muted">Por ejemplo: wwww.suplidores.com</small>
                                 </div>
                             </div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Suplidor</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i>Cancelar</button></a>
 </div>
                     }
