--- a/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
@@ -447,7 +447,7 @@
                                 <small class="form-text text-muted">Número de sello del vehículo</small>
                             </div>
                         </div>
-                        <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Titular</button></a>
+                        <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                     </div>
                     }
                 </div>
