--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -83,8 +83,8 @@
                                         <th class="f-b">Nombre</th>
                                         <th class="f-b">Apellidos</th>
                                         <th class="f-b">Email</th>
-                                        <th class="f-b">Comunidade</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Comunidades</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
