--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Agregar Entrada - Brokolee Software";
+    Page.Title = "Blog Agregar - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -62,12 +62,12 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autora</label>
+                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="author"
-                                           data-toggle="tooltip" title="Autora descriptivo del blog" placeholder="Autora"
+                                           data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
                                            id="example-email-input-2" required />
-                                    <small class="form-text text-muted">Autora descriptivo del blog</small>
+                                    <small class="form-text text-muted">Autor descriptivo del blog</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -80,7 +80,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Entrada</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
