--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
@@ -63,12 +63,12 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autora</label>
+                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editBlog.author" name="author"
-                                           data-toggle="tooltip" title="Autora descriptivo del blog" placeholder="Autora"
+                                           data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
                                            id="example-email-input-2" required />
-                                    <small class="form-text text-muted">Autora descriptivo del blog</small>
+                                    <small class="form-text text-muted">Autor descriptivo del blog</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -81,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Entrada</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
