--- a/WebApplication1/Areas/coadmin/Views/suplidores/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/editar.cshtml
@@ -206,7 +206,7 @@
                                     <small class="form-text text-muted">Por ejemplo: wwww.suplidores.com</small>
                                 </div>
                             </div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar Suplidor</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
