--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
@@ -57,7 +57,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
                             <li class="breadcrumb-item active">Agregar Titulo</li>
                         </ul>
                     </div>
@@ -238,7 +238,7 @@
                                     <div class="col-sm-9">
                                         <input class="form-control" type="text" value="" name="leased_postal_address"
                                                data-toggle="tooltip" title="Dirección postal del arrendatario"
-                                               placeholder="Dirección Postal" id="example-address1-input">
+                                               placeholder="Dirección postal" id="example-address1-input">
                                         <small class="form-text text-muted">Dirección postal del arrendatario</small>
                                     </div>
                                 </div>
