--- a/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
                             <li class="breadcrumb-item active">Editar Título de Propiedad</li>
                         </ul>
                     </div>
@@ -142,7 +142,7 @@
                                            name="apartment" required
                                            data-toggle="tooltip"
                                            placeholder="Apartamento" id="apartment-input">
-                                    @*  <small class="form-text text-muted">Apartamento del Titular</small>*@
+                                    @*  <small class="form-text text-muted">Apartamento del titular</small>*@
                                 </div>
                             </div>
 
