--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarblog.cshtml
@@ -68,12 +68,12 @@
                                     </div>
                                     <div class="form-divider"></div>
                                     <div class="form-group row">
-                                        <label for="example-email-input-2" class="col-sm-3 col-form-label">Autora</label>
+                                        <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
                                         <div class="col-sm-9">
                                             <input class="form-control" type="text" value="" name="author"
-                                                   data-toggle="tooltip" title="Autora descriptivo del blog" placeholder="Autora"
+                                                   data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
                                                    id="example-email-input-2" required />
-                                            <small class="form-text text-muted">Autora descriptivo del blog</small>
+                                            <small class="form-text text-muted">Autor descriptivo del blog</small>
                                         </div>
                                     </div>
                                     <div class="form-divider"></div>
