--- a/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
@@ -114,7 +114,7 @@
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04"
                                                    data-toggle="tooltip" name="user_logo">
-                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar Imagen del Titular</label>
+                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar imagen del titular</label>
                                         </div>
                                         <div class="col-sm-3">
                                             <small class="form-text text-muted">Subir logo en formato jpg o png</small>
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="form-divider"></div>
-                            <h6 class="mt-0 header-title">Nombre completo del Titular</h6>
+                            <h6 class="mt-0 header-title">Nombre completo del titular</h6>
                             <p>Nombre del titular según aparece en la escritura de compraventa.</p>
                             <div class="form-group row">
                                 <label for="example-name2-input-first-name" class="col-sm-3 col-form-label">Nombre</label>
@@ -183,7 +183,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de Teléfono</label>
+                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de teléfono</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" name="phone_number1"
                                            type="tel" data-toggle="tooltip"
@@ -195,7 +195,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address1-input-postal-address" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                <label for="example-address1-input-postal-address" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
                                            type="text" name="postal_address"
@@ -208,7 +208,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address2-input-residential-address" class="col-sm-3 col-form-label">Dirección Residencial</label>
+                                <label for="example-address2-input-residential-address" class="col-sm-3 col-form-label">Dirección residencial</label>
                                 <div class="col-sm-9">
                                     <input class="form-control"
                                            type="text" name="residential_address"
