--- a/WebApplication1/Areas/coadmin/Views/administrador/perfil.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/administrador/perfil.cshtml
@@ -214,13 +214,13 @@
                                 <div class="col-sm-9">
                                     
                                     <div class="input-group mt-2">
-                                        <div class="custom-file" ">
+                                        <div class="custom-file">
 
 
                                            
 
                                             <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                                   name="upload_writing" data-toggle="tooltip" title="Dirección residencial del Titular" />
+                                                   name="upload_writing" data-toggle="tooltip" title="Seleccionar archivo" />
                                             <label class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
                                         </div>
                                     </div>
