--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Blog Comentario Agregar - Brokolee Software";
+    Page.Title = "Agregar comentario - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -14,13 +14,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Blog</h4>
+                            <h4 class="page-title">Agregar comentario</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Blog</li>
+                            <li class="breadcrumb-item active">Agregar comentario</li>
                         </ul>
                     </div>
                 </div>
@@ -51,18 +51,8 @@
                         @Html.AntiForgeryToken()
                         <input name="blogID" value="@Model.blogID" type="hidden" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Blog Comentario</h5>
+                            <h5 class="d-inline-block">Nuevo Comentario</h5>
                             <div class="form-divider"></div>
-                            <div class="form-group row" style="display: block;">
-                                <label for="example-email-input-1" class="col-sm-3 col-form-label">Nombre</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="name"
-                                           data-toggle="tooltip" title="Título descriptivo del blog"
-                                           placeholder="Nombre del Autor" id="example-email-input-1"  />
-                                    <small class="form-text text-muted">Nombre descriptivo del blog</small>
-                                </div>
-                            </div>
-                            
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Comentario</label>
                                 <div class="col-sm-9">
@@ -73,7 +63,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Comentario</button></a>
-                            <a href="@Url.Action("verblog", "comunicaciones", new { area="coadmin", blogID=Model.blogID })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("blog", "comunicaciones", new { area="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
