--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
@@ -4,14 +4,32 @@
     Page.Title = "Blog General - Brokolee Software";
 }
 
-<link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<style>
+    .caja {
+        box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
+        padding: 10px;
+        margin-top: 30px;
+        background-color: #fff;
+    }
+
+    .fecha span {
+        float: right;
+        font-size: 16px;
+        color: cornflowerblue;
+    }
+</style>
+
+
 
 <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+@*
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link href="~/assets/css/blog.css" rel="stylesheet" />
+*@
 
 
-<link href="~/assets/css/blog.css" rel="stylesheet" />
 
 <div class="page-content-wrapper">
 
@@ -35,9 +53,13 @@
             </div>
         </div>
 
+        <!-- back button -->
+        @*<div class="row pb-4">
+                <div class="col-md-6">
+                    <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                </div>
+            </div>*@
 
-
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-12">
                 <div class="card">
@@ -60,65 +82,101 @@
         <!-- end back button -->
 
     </div><!-- container -->
-    @foreach (var item in Model.blogList)
-
-    {
-        <div class="Container">
-
-            <div class="row">
-                <div class="col-sm-12">
-
-                    <div class="single-blog">
-                        <p class="fecha">
-                            @item.author<span>
-
-                                <td>@Convert.ToDateTime(item.blogdate).ToString("dd/MM/yyyy HH:mm")</td>
-                            </span>
-                        </p>
-
-                        @*<img src="~/Areas/coadmin/img/blog.png" />*@
-                        
-                            <h2>
-                                <a class="titulo" href="#"> @item.title</a>
-                            </h2>
-                            <p class="blog-text">@item.content</p>
-                            <p>
-                                <a href="" class="">
-
-                                    <a href="@Url.Action("editarblog", "comunicaciones", new { area = "coadmin", blogID = item.id })">
-                                        <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                data-toggle="tooltip" data-placement="top" title="Editar">
-                                            <i class="mdi mdi-lead-pencil"></i>
-                                        </button>
-                                    </a>
-                                    <a href="@Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "coadmin" })">
-                                        <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                data-toggle="tooltip" data-placement="top" title="Ver">
-                                            <i class="mdi mdi-eye"></i>
-                                        </button>
-                                    </a>
-                                </a>
-                                <span>
-                                    <i class="fa fa-thumbs-o-up"></i> likes
-                                    <i class="fa fa-comment-o"></i> Coments
-                                   
-
-
-                                </span>
-                            </p>
-                        </div>
-                    </div>
+    <!-- end back button -->
+    <!-- end page title end breadcrumb -->
+    <div id="divContenido"></div>
 
 
 
-            </div>
 
-        </div>
-    }
-
+    <br/>
     <div class="row pb-4">
         <div class="col-md-6">
             <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
         </div>
     </div>
-</div> <!-- Page content Wrapper -->
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script>
+
+
+    console.log('@Model.Content');
+
+
+       var url = "@Url.Action("ArmarBlogs", "comunicaciones", new { area = "coadmin" })";
+     var compania = new Array();
+    var formData = new FormData();
+
+    formData.append('ID', '@Model.Content');
+
+    compania.push(formData);
+    $.ajax({
+        url: url,
+        type: "post",
+        data: compania[0],
+                success: function (result) {
+                    $("#divContenido").append(result);
+                },
+                processData: false,
+                contentType: false
+    });
+    //.ToString()
+
+
+
+    $(document).ready(function () {
+          $(".Eliminar").on('click', function () {
+            var url = "@Url.Action("eliminarBlog", "comunicaciones", new { area = "coadmin"})";
+             var compania = new Array();
+          var formData = new FormData();
+
+
+             var id = $(".Eliminar").attr('data-id');
+            formData.append('blogID',  id);
+
+            compania.push(formData);
+            $.ajax({
+                url: url,
+                type: "post",
+                data: compania[0],
+                        success: function (result) {
+                            if (result.result == "success") {
+                                location.reload();
+                            } else {
+                                alert("Error al eliminar el blog: "+ result.exception);
+                            }
+                        },
+                        processData: false,
+                        contentType: false
+            });
+        });
+
+         $(".Like").on('click', function () {
+            var url = "@Url.Action("AgregarLikeblog", "comunicaciones", new { area = "coadmin" })";
+             var compania = new Array();
+          var formData = new FormData();
+
+
+             var id = $(".Like").attr('data-id');
+            formData.append('ID',  id);
+
+            compania.push(formData);
+            $.ajax({
+                url: url,
+                type: "post",
+                data: compania[0],
+                        success: function (result) {
+                            //  $("#divContenido").append(result);
+                            console.log(result);
+                        },
+                        processData: false,
+                        contentType: false
+            });
+        });
+
+    });
+
+
+
+
+</script>
