--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
@@ -1,9 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "blog";
-    Page.Title = "Editar Entrada - Brokolee Software";
+    ViewBag.Title = "editarblog";
+    Page.Title = "Editar blog - Brokolee Software";
 }
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.js"></script>
 <div class="page-content-wrapper">
 
     <div class="container-fluid">
@@ -13,13 +17,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Entrada</h4>
+                            <h4 class="page-title">Agregar Blog</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Entrada</li>
+                            <li class="breadcrumb-item active">Agregar Blog</li>
                         </ul>
                     </div>
                 </div>
@@ -48,7 +52,7 @@
                     }))
                     {
                         @Html.AntiForgeryToken()
-                        <input type="hidden" name="editID" value="@Model.editBlog.id"/>
+                        <input type="hidden" name="editID" value="@Model.editBlog.id" />
                         <div class="card-body">
                             <h5 class="d-inline-block">Nuevo Blog</h5>
                             <div class="form-divider"></div>
@@ -75,14 +79,14 @@
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" name="content" data-toggle="tooltip"
+                                    <textarea class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
                                               title="Contenido descriptivo del blog">@Model.editBlog.content</textarea>
                                     <small class="form-text text-muted">Contenido descriptivo del blog</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("blog", "comunicaciones", new { area="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -99,3 +103,8 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+<script>
+
+    $('#tbxContenido').summernote();
+
+</script>
