--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
@@ -1,11 +1,14 @@
 ﻿
-
 @{
     ViewBag.Title = "verblog";
     Page.Title = "Ver blog - Brokolee Software";
 }
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<div class="pahe-content-wrapper">
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.js"></script>
+<div class="page-content-wrapper">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
@@ -49,20 +52,15 @@
                             </div>
                         </div>
                         <div class="form-divider"></div>
-                        <div class="row form-material"
-                            <div class="row form-material">
-                                <div class="col-md-6">
-                                    <p><i class="mdi mdi-worker text-primary"></i>@Model.viewBlog.author</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p><i class="mdi mdi-clock text-primary"></i>@Convert.ToDateTime(Model.viewBlog.blogdate).ToString("yyyy-MM-dd HH:mm")</p>
-                                </div>
+                        <div class="row form-material">
+                            <div class="col-md-6 mb-1">
+                                <p><i class="mdi mdi-worker text-primary"></i>@Model.viewBlog.author</p>
                             </div>
-
-                            <div class="row form-material">
-                                <div class="col-md-11 mb-3">
-                                    <textarea class="form-control" rows="3" readonly>@Model.viewBlog.content</textarea>
-                                </div>
+                            <div class="col-md-6">
+                                <p><i class="mdi mdi-clock text-primary"></i>@Convert.ToDateTime(Model.viewBlog.blogdate).ToString("yyyy-MM-dd HH:mm")</p>
+                            </div>
+                            <div class="col-md-11 mb-3">
+                                <textarea class="form-control" rows="3" id="tbxContenido" readonly>@Model.viewBlog.content</textarea>
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -71,7 +69,7 @@
                                 <h5 class="d-inline-block">Blog Comentarios</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregarcomentario", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })">
+                                <a href="@Url.Action("agregarcomentario", "comunicaciones", new { blogID = Model.blogID, area = "coadmin" })">
                                     <button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar Comentario</button>
                                 </a>
                             </div>
@@ -82,7 +80,7 @@
                                    style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        @*<th>Nombre</th>*@
+                                        <th>Nombre</th>
                                         <th>Comentario</th>
                                         <th>Fecha de publicación</th>
                                     </tr>
@@ -91,7 +89,7 @@
                                     @foreach (var item in Model.blogcommentList)
                                     {
                                         <tr>
-                                            @*<td>@item.name</td>*@
+                                            <td>@item.name</td>
                                             <td>@item.comment.</td>
                                             <td class="text-center">@Convert.ToDateTime(item.postdate).ToString("MM/dd/yyyy HH:mm")</td>
                                         </tr>
@@ -112,3 +110,8 @@
         </div>
     </div>
 </div>
+<script>
+
+    $('#tbxContenido').summernote();
+
+</script>
