--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
@@ -57,7 +57,7 @@
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
                             <li class="breadcrumb-item active">Agregar Vehículos</li>
                         </ul>
                     </div>
@@ -158,6 +158,7 @@
                                 <small class="form-text text-muted">Número de sello del vehículo</small>
                             </div>
                         </div>
+
                         <!-- View -->
                         <!-- End View -->
                         <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
