--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -35,7 +35,7 @@
                             <input type="text" id="search-input" name="searchStr" value="@Model.searchStr"
                                    class="form-control" placeholder="Buscar por nombre o apellido...">
                             <span class="input-group-append">
-                                <button type="submit" id="search-button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
+                                <button type="button" id="search-button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
                             </span>
                         </div>
                     </div>
@@ -45,9 +45,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()">
-                    <button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button>
-                </a>
+                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -58,7 +56,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-
+                                <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("agregar", "titulares", new { area = "coadmin" })">
@@ -83,53 +81,75 @@
                                         <th class="f-b">Nombre</th>
                                         <th class="f-b">Apellidos</th>
                                         <th class="f-b">Email</th>
-                                        <th class="f-b">Comunidades</th>
                                         <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
-                                <tbody id="id-titular-datatable-tbody">
+                                <tbody>
                                     @foreach (var item in Model.titularList)
                                     {
                                         <tr>
                                             <td>@item.first_name1</td>
                                             <td>@item.last_name1</td>
                                             <td>@item.email</td>
-                                            <td>@Model.communityDict[item.id]</td>
+
                                             <td class="text-center">
                                                 @if (item.is_active == true)
                                                 {
-                                                    <button onclick="onDeactiveResident(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm">Activo</button>
+                                                    <button type="button" onclick="onDeactiveResident(this)" data-id="@item.id"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm">
+                                                        Activo
+                                                    </button>
                                                 }
                                                 else
                                                 {
-                                                    <button onclick="onActiveResident(this)" data-id="@item.id" type="button" class="btn btn-danger waves-effect waves-light btn-sm">Inactivo</button>
+                                                    <button type="button" onclick="onActiveResident(this)" data-id="@item.id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm">
+                                                        Inactivo
+                                                    </button>
                                                 }
                                             </td>
                                             <td class="text-center">
                                                 <a href="@Url.Action("ver", "titulares", new { area = "coadmin", id = item.id })">
-                                                    <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Ver">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Ver">
                                                         <i class="mdi mdi-eye"></i>
                                                     </button>
                                                 </a>
-                                                <a href="@Url.Action("editar", "titulares", new {  area = "coadmin", id = item.id })">
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                <a href="@Url.Action("editar", "titulares", new { area = "coadmin", id = item.id })">
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Editar">
                                                         <i class="mdi mdi-lead-pencil"></i>
                                                     </button>
                                                 </a>
-                                                <button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-id="@item.id"
-                                                        onclick="onDeleteResident(this)"
-                                                        data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
+                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "coadmin", id = item.id })"
+                                                   class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                   data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                                    <i class="mdi mdi-home"></i>
+                                                </a>
+                                                <a href="#">
+                                                    <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
+
+
                                             </td>
+
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -139,10 +159,6 @@
             <div class="col-md-6">
                 <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
-        </div>
-
-        <div class="hidden">
-            <input type="hidden" id="id-resident-user-id" />
         </div>
         <!-- end back button -->
 
