--- a/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
@@ -13,19 +13,19 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Vehículos</h4>
+                            <h4 class="page-title">Comunidades</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Vehículos</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
+                            <li class="breadcrumb-item active">Comunidades</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-
+       
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
@@ -54,50 +54,40 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                @if ((Model.titulo.CarMax == null && 1 < Model.CantidadDeVehiculos) || Model.titulo.CarMax <= Model.CantidadDeVehiculos)
-                                {
+                                <a href="@Url.Action("agregarTitulo", "titulares", new { area = "coadmin", id = Model.IdUserTitular })" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
 
-                                    <a href="#" class="btn btn-default waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
-
-                                        Agregar nuevo
-                                    </a>
-                                }
-                                else
-                                {
-                                    <a href="@Url.Action("agregarVehiculo", "titulares", new { area = "webmaster", Id = Model.titulo.Id })" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
-
-                                        Agregar nuevo
-                                    </a>
-                                }
-
+                                    Agregar nuevo
+                                </a>
                             </div>
                         </div>
                         <div class="table-responsive">
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Marca</th>
-                                        <th class="f-b">Modelo</th>
-                                        <th class="f-b">Color</th>
-                                        <th class="f-b">Año</th>
-                                        <th class="f-b">Tablilla</th>
-                                        <th class="f-b">Número de sello</th>
+                                        <th class="f-b">Comunidad</th>
+                                        <th class="f-b">Fecha de adquisición</th>
+                                        <th class="f-b">Apartamento</th>
+                                        <th class="f-b">¿Está arrendada?</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.vehiculosList)
+                                    @foreach (var item in Model.titulosList)
                                     {
                                         <tr>
-                                            <td>@item.Brand</td>
-                                            <td>@item.Model</td>
-                                            <td>@item.Color</td>
-                                            <td>@item.Year</td>
-                                            <td>@item.ClapBoard</td>
-                                            <td>@item.StampNumber</td>
-
+                                            <td>@item.community.first_name</td>
+                                            <td>@item.acq_date.ToString("MM/dd/yyyy")</td>
+                                            <td>@item.apartment</td>
+                                            @if (item.is_leased)
+                                            {
+                                                <td>Si</td>
+                                            }
+                                            else
+                                            {
+                                                <td>No</td>
+                                            }
                                             <td class="text-center">
-                                                <a href="@Url.Action("verVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                                <a href="@Url.Action("verTitulo", "titulares", new { area = "coadmin", id = item.Id })">
                                                     <button type="button"
                                                             class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip"
@@ -106,15 +96,20 @@
                                                         <i class="mdi mdi-eye"></i>
                                                     </button>
                                                 </a>
-                                                <a href="@Url.Action("editarVehiculo", "titulares", new { area = "webmaster", id = item.IdVehiculo })">
+                                                <a href="@Url.Action("editarTitulo", "titulares", new { area = "coadmin", id = item.Id })">
                                                     <button type="button"
                                                             class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Editar">
                                                         <i class="mdi mdi-lead-pencil"></i>
                                                     </button>
                                                 </a>
+                                                <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "coadmin", id = item.Id })"
+                                                   class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                   data-toggle="tooltip" data-placement="top" title="Listado Vehículos">
+                                                    <i class="mdi mdi-car"></i>
+                                                </a>
                                                 <a href="#">
-                                                    <button type="button" onclick="onDeleteVehiculo(this)" data-id="@item.IdVehiculo"
+                                                    <button type="button" onclick="onDeleteTitulo(this)" data-id="@item.Id"
                                                             class="btn btn-danger waves-effect waves-light btn-sm mb-1"
                                                             data-toggle="tooltip"
                                                             data-placement="top"
@@ -122,7 +117,6 @@
                                                         <i class="mdi mdi-delete"></i>
                                                     </button>
                                                 </a>
-
 
                                             </td>
 
@@ -158,13 +152,13 @@
     </form>
 </div> <!-- Page content Wrapper -->
 <script>
-     function onDeleteVehiculo(self) {
+             function onDeleteTitulo(self) {
             var id = $(self).data('id');
             var formData = new FormData();
             formData.append("delID", id);
 
-            var url = "@Url.Action("DeleteVehiculo", "titulares", new { area = "webmaster" })";
- var respuesta = confirm("¿Estás seguro que deseas eliminar el vehículo?");
+            var url = "@Url.Action("DeleteTitulo", "titulares", new { area = "coadmin" })";
+         var respuesta = confirm("¿Estás seguro que deseas eliminar el título?");
                 if (respuesta == true) {
                     $.ajax({
                         url: url,
@@ -181,7 +175,9 @@
                         processData: false,
                         contentType: false
                     });
+
                      } else {
+
                     return false;
                     }
         }
