--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarcomentario.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Blog Comentario Agregar - Brokolee Software";
+    Page.Title = "Agregar Comentario - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -14,13 +14,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Blog</h4>
+                            <h4 class="page-title">Agregar comentario</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Blog</li>
+                            <li class="breadcrumb-item active">Agregar comentario</li>
                         </ul>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         @Html.AntiForgeryToken()
                         <input name="blogID" value="@Model.blogID" type="hidden" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Blog Comentario</h5>                          
+                            <h5 class="d-inline-block">Nuevo Comentario</h5>                          
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Comentario</label>
