--- a/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
@@ -143,63 +143,63 @@
                             </div>
                             <div class="form-divider"></div>                           
                             <div class="form-divider"></div>
-                            <h6 class="mt-0 header-title">Nombre completo del Titular</h6>
+                            <h6 class="mt-0 header-title">Nombre completo del titular</h6>
                             <p>Nombre del titular según aparece en la escritura de compraventa.</p>
                             <div class="form-group row">
                                 <label for="example-name22-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="first_name1"
-                                           data-toggle="tooltip" title="Nombre del Titular"
+                                           data-toggle="tooltip" title="Nombre del titular"
                                            placeholder="Nombre" id="example-name22-input" />
-                                    <small class="form-text text-muted">Nombre del Titular</small>
+                                    <small class="form-text text-muted">Nombre del titular</small>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="last_name1"
-                                           data-toggle="tooltip" title="Apellido paterno del Titular"
+                                           data-toggle="tooltip" title="Apellido paterno del titular"
                                            placeholder="Apellido paterno" id="example-lastname22-input">
-                                    <small class="form-text text-muted">Apellido paterno del Titular</small>
+                                    <small class="form-text text-muted">Apellido paterno del titular</small>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="example-lastname22m-input" class="col-sm-3 col-form-label">Apellido materno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="mother_last_name1"
-                                           data-toggle="tooltip" title="Apellido materno del Titular"
+                                           data-toggle="tooltip" title="Apellido materno del titular"
                                            placeholder="Apellido materno" id="example-lastname22m-input">
-                                    <small class="form-text text-muted">Apellido materno del Titular</small>
+                                    <small class="form-text text-muted">Apellido materno del titular</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de Teléfono</label>
+                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de teléfono</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="tel" value="" name="phone_number1"
-                                           data-toggle="tooltip" title="Número de teléfono del Titular"
+                                           data-toggle="tooltip" title="Número de teléfono del titular"
                                            placeholder="# Teléfono" id="example-tel1-input">
-                                    <small class="form-text text-muted">Número de teléfono del Titular</small>
+                                    <small class="form-text text-muted">Número de teléfono del titular</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address11-input" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                <label for="example-address11-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="postal_address"
-                                           data-toggle="tooltip" title="Dirección postal del Titular"
+                                           data-toggle="tooltip" title="Dirección postal del titular"
                                            placeholder="Dirección Postal" id="example-address11-input">
-                                    <small class="form-text text-muted">Dirección postal del Titular</small>
+                                    <small class="form-text text-muted">Dirección postal del titular</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address2-inputt" class="col-sm-3 col-form-label">Dirección Residencial</label>
+                                <label for="example-address2-inputt" class="col-sm-3 col-form-label">Dirección residencial</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="residential_address"
-                                           data-toggle="tooltip" title="Dirección residencial del Titular"
-                                           placeholder="Dirección Residencial" id="example-address2-inputt">
-                                    <small class="form-text text-muted">Dirección residencial del Titular-G1</small>
+                                           data-toggle="tooltip" title="Dirección residencial del titular"
+                                           placeholder="Dirección residencial" id="example-address2-inputt">
+                                    <small class="form-text text-muted">Dirección residencial del titular-G1</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>      
