--- a/WebApplication1/Areas/webmaster/Views/titulares/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "El nombre del Titular - Brokolee Software";
+    Page.Title = "Ver Titular - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -90,7 +90,7 @@
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.editUser.first_name1" readonly
                                        placeholder="Nombre" id="example-name2-input" data-toggle="tooltip" />
-                                <small class="form-text text-muted">Nombre del Titular</small>
+                                <small class="form-text text-muted">Nombre del titular</small>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -99,7 +99,7 @@
                                 <input class="form-control" type="text" value="@Model.editUser.last_name1" readonly
                                        placeholder="Apellido paterno" id="example-lastname2-input"
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Apellido paterno del Titular</small>
+                                <small class="form-text text-muted">Apellido paterno del titular</small>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -108,37 +108,37 @@
                                 <input class="form-control" type="text" value="@Model.editUser.mother_last_name1" readonly
                                        placeholder="Apellido materno" id="example-lastname2m-input"
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Apellido materno del Titular</small>
+                                <small class="form-text text-muted">Apellido materno del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de Teléfono</label>
+                            <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de teléfono</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="tel" value="@Model.editUser.phone_number1"
                                        placeholder="# Teléfono" id="example-tel1-input" readonly
                                        data-toggle="tooltip"  />
-                                <small class="form-text text-muted">Número de teléfono del Titular</small>
+                                <small class="form-text text-muted">Número de teléfono del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección Postal</label>
+                            <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.editUser.postal_address"
                                        placeholder="Dirección Postal" id="example-address1-input" readonly
                                        data-toggle="tooltip"  />
-                                <small class="form-text text-muted">Dirección postal del Titular</small>
+                                <small class="form-text text-muted">Dirección postal del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección Residencial</label>
+                            <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección residencial</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.editUser.residential_address"
                                        placeholder="Dirección Residencial" id="example-address2-input" readonly
                                        data-toggle="tooltip"  />
-                                <small class="form-text text-muted">Dirección residencial del Titular</small>
+                                <small class="form-text text-muted">Dirección residencial del titular</small>
                             </div>
                         </div>
 
