Filtrado por propiedades

--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">El nombre del Suplidor</h4>
+                            <h4 class="page-title">Ver suplidor</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Dashboard</a></li>
-                            <li class="breadcrumb-item active">El nombre del Suplidor</li>
+                            <li class="breadcrumb-item active">Ver suplidor</li>
                         </ul>
                     </div>
                 </div>
@@ -43,8 +43,8 @@
                                 <h5 class="d-inline-block">@Model.viewSupplier.company - @Model.viewSupplier.contact_name | <input type="hidden" class="rating" data-filled="mdi mdi-star font-20 text-warning" data-empty="mdi mdi-star-outline font-20 text-warning" data-readonly value="@Model.viewSupplier.assessment" /></h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("editar", "suplidores", new { area = "coadmin", editID=Model.viewSupplier.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left">Editar</button></a>
-                                <a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                <a href="@Url.Action("editar", "suplidores", new { area = "coadmin", editID=Model.viewSupplier.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Editar</button></a>
+                                <a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Agregar nuevo</button></a>
                             </div>
                         </div>
                         <div class="form-divider"></div>
