--- a/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Editar vehículo - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -26,13 +26,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Vehículo</h4>
+                            <h4 class="page-title">Editar vehículo</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Vehículos</li>
+                            <li class="breadcrumb-item active">Editar vehículo</li>
                         </ul>
                     </div>
                 </div>
