--- a/WebApplication1/Areas/coadmin/Views/titulares/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "Ver Titular - Brokolee Software";
+    Page.Title = "Ver titular - Brokolee Software";
 
 }
 
@@ -20,7 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Titular</li>
+                            <li class="breadcrumb-item active">Ver titular</li>
                         </ul>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Información del Titular</h5>
+                                <h5 class="d-inline-block">Información del titular</h5>
                             </div>
                             @*<div class="col-md-6 mb-1">
                                     <a href="@Url.Action("editar", "titulares", new { area = "webmaster", id = Model.editUser.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left">Editar</button></a>
