--- a/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Suplidores</h4>
+                            <h4 class="page-title">Listado de suplidores</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Suplidores</li>
+                            <li class="breadcrumb-item active">Listado de suplidores</li>
                         </ul>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                                     </span>
                                 </div>
                                 <div class="input-group col-md-6">
-                                    <label class="col-sm-6 col-md-4 col-form-label">Buscar por Categoría</label>
+                                    <label class="col-sm-6 col-md-4 col-form-label">Buscar por categoría</label>
                                     <div class="col-sm-6 col-md-8">
                                         <select class="form-control" id="id-search-category"
                                                 name="searchCategoryId"
@@ -101,8 +101,8 @@
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Compañía Suplidor</th>
-                                        <th class="f-b">Nombre de Contacto</th>
+                                        <th class="f-b">Compañía suplidor</th>
+                                        <th class="f-b">Nombre de contacto</th>
                                         <th class="f-b">Tipo de servicio</th>
                                         <th class="f-b">Categoría</th>
                                         <th class="f-b text-center">Valoración</th>
