--- a/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Titular - Brokolee Software";
+    Page.Title = "Agregar titular - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -53,7 +53,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Titular</li>
+                            <li class="breadcrumb-item active">Agregar titular</li>
                         </ul>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
+                            <h5 class="d-inline-block">Información del titular</h5>
 
                             <div class="form-divider"></div>
                             <div class="form-group row">
@@ -107,7 +107,7 @@
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04"
                                                    data-toggle="tooltip" title="Subir logo en formato jpg o png" name="user_logo" />
-                                            <label class="custom-file-label" for="inputGroupFile04">Selecciona Tu Imagen</label>
+                                            <label class="custom-file-label" for="inputGroupFile04">Selecciona tu imagen</label>
                                         </div>
                                         <div class="col-sm-3">
                                             <small class="form-text text-muted">Subir logo en formato jpg o png</small>
@@ -194,7 +194,7 @@
                                     <input class="form-control" type="text" value="" name="residential_address"
                                            data-toggle="tooltip" title="Dirección residencial del titular"
                                            placeholder="Dirección residencial" id="example-address2-inputt">
-                                    <small class="form-text text-muted">Dirección residencial del titular-G1</small>
+                                    <small class="form-text text-muted">Dirección residencial del titular</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
