--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Titular - Brokolee Software";
+    Page.Title = "Agregar vehículos - Brokolee Software";
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
@@ -58,7 +58,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Vehículos</li>
+                            <li class="breadcrumb-item active">Agregar vehículos</li>
                         </ul>
                     </div>
                 </div>
