--- a/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Editar titular - Brokolee Software";
 }
 
 
@@ -54,7 +54,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Titular</li>
+                            <li class="breadcrumb-item active">Editar titular</li>
                         </ul>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         @Html.AntiForgeryToken()
                         <input type="hidden" value="@Model.editUser.id" name="editID" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
+                            <h5 class="d-inline-block">Información del titular</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <div id="img-fluid" class="col-sm-3">
