--- a/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listadoTitulos.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Titulos - Brokolee Software";
+    Page.Title = "Listado de títulos - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Comunidades</h4>
+                            <h4 class="page-title">Títulos</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Comunidades</li>
+                            <li class="breadcrumb-item active">Listado de títulos</li>
                         </ul>
                     </div>
                 </div>
