--- a/WebApplication1/Areas/coadmin/Views/titulares/verVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/verVehiculo.cshtml
@@ -8,8 +8,8 @@
 
 
 @{
-    ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    ViewBag.Title = "ver";
+    Page.Title = "Ver vehículo - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -34,13 +34,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Ver Vehículo</h4>
+                            <h4 class="page-title">Ver vehículo</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Vehículo</li>
+                            <li class="breadcrumb-item active">Ver vehículo</li>
                         </ul>
                     </div>
                 </div>
