Cambios para ocultar residencias no autorizadas a los administradores

--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
@@ -132,10 +132,10 @@
                         <div class="form-group row">
                             <label for="apartment-input" class="col-sm-3 col-form-label">Comunidad</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" readonly name="IdCommunity"
-                                       data-toggle="tooltip" title="Apartamento del titular"
-                                       placeholder="Apartamento" id="IdCommunity">
-                                <small class="form-text text-muted">Comunidad asociada</small>
+                                <input class="form-control" type="text" value="@Model.viewModel.communityName" readonly name="IdCommunity"
+                                       data-toggle="tooltip" title="Nombre de la comunidad"
+                                       placeholder="" id="IdCommunity">
+                                <small class="form-text text-muted">Nombre de la comunidad</small>
                             </div>
                         </div>*@
 
